<resources>
    <string name="app_name">Hockey Report</string>
    <string name="reportBtn">New Report</string>
    <string name="possessionWonBtn">Possession Won</string>
    <string name="possessionLostBtn">Possession Lost</string>
    <string name="hitBtn">Hit</string>
    <string name="faceoffBtn">FaceOff</string>
    <string name="faceoffLostBtn">FaceOff Lost</string>
    <string name="faceoffWonBtn">FaceOff Won</string>
    <string name="assistBtn">Assist</string>
    <string name="firstAssistBtn">First Assist</string>
    <string name="secondAssistBtn">Second Assist</string>
    <string name="penaltyDrawnBtn">Penalty Drawn</string>
    <string name="penaltyTakenBtn">Penalty Taken</string>
    <string name="shotBtn">Shot</string>
    <string name="fightBtn">Fight</string>
    <string name="blockedBtn">Shot Blocked</string>
    <string name="shotForBtn">Shot For</string>
    <string name="shotAgainstBtn">Shot Against</string>
    <string name="historyBtn">Report History</string>
    <string name="menuTxtView">Menu</string>
    <string name="timeShiftTxtView"> Time of shift - </string>
    <string name="startShiftBtn"> Start/Resume shift</string>
    <string name="endShiftBtn"> End Shift</string>
    <string name="pauseShiftBtn"> Pause shift</string>
    <string name="nextPeriodBtn">Next Period</string>
    <string name="prevPeriodBtn">Previous Period</string>
    <string name="endGameBtn">End Game</string>
    <string name="periodTxtView">Period 1</string>
    <string name="onNetBtn">On Net</string>
    <string name="notOnNetBtn">NOT On Net</string>
    <string name="title_activity_goal">GoalActivity</string>
    <string name="goalBtn">Goal</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="nameTxt">Player Name: </string>
    <string name="goalsForTxt">Goals For: </string>
    <string name="teamForTxt">Team For: </string>
    <string name="goalsAgainstTxt">Goals Against: </string>
    <string name="teamAgainstTxt">Team Against: </string>
    <string name="locationTxt">Location: </string>
    <string name="dateTxt">Date: </string>
    <string name="positionTxt">Position: </string>
    <string name="submitBtn">Create Report</string>
    <string name="title_activity_past_performance">PastPerformance</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


</resources>